# urbanicola_api

./: CHANGELOG.md  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: actions.yml
app/: __init__.py  main.py
tests/: test_transformations.py
tests/data/: gastos.csv  sales.csv  spents.csv  subtipo.csv  test_data.csv  venta_URBANICOLA_2023.csv
