[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
author = "NIES"
author-email = "nepo.rojas@gmail.com"
classifiers = [ "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",]
description-file = "README.md"
home-page = "https://github.com/nepito/urbanicola_api"
module = "app"
requires = [
	"fastapi",
	"httpx",
	"pandas",
	"urbanicola-data",
]
requires-python=">=3.9"
